--- a/login.html
+++ b/login.html
@@ -435,10 +435,7 @@ function callSignIdentity(session) {
 	var features = window.connect_data.features;
 	return session.signIdentity(request.identity, request.challenge_hidden, request.challenge_visual).then(function (result) {
 		var response = {};
-		var version = 1;
-		if (features && features.major_version >= 1 && features.minor_version >= 3 && features.patch_version >= 4) {
-			version = 2;
-		}
+		var version = apiVersion(features);
 		if (version == 1) {
 			response.challenge_hidden = request.challenge_hidden;
 			response.challenge_visual = request.challenge_visual;
@@ -451,6 +448,22 @@ function callSignIdentity(session) {
 	});
 }
 
+function apiVersion(features) {
+    if (features) {
+        if(features.major_version > 1) {
+            return 2;
+        } else {
+            if (features.minor_version > 3) {
+                return 2;
+            } else {
+                if (features.patch_version >= 4) {
+                    return 2;
+                }
+            }
+        }
+    }
+    return 1;
+}
 
 function pinKeydownHandler(e) {
 	var k = e.keyCode;
